Example #6/Service_dev1.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-dev1-svc
  namespace: dev1
spec:
  selector:
    name: demo-dev1  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
