Example #6/Service_dev2.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-dev2-svc
  namespace: dev2
spec:
  selector:
    name: demo-dev2 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
